--- a/week3_/mini-batch-gradient-descent.ipynb
+++ b/week3_/mini-batch-gradient-descent.ipynb
@@ -187,7 +187,72 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create the custom Data class which inherits Dataset\n",
+    "class Data(Dataset):\n",
+    "    \n",
+    "    # Constructor\n",
+    "    def __init__(self):\n",
+    "        # Create X values from -1 to 1 with step .1\n",
+    "        self.x = torch.arange(-1, 1, 0.1).view(-1, 1)\n",
+    "        # Create Y values all set to 0\n",
+    "        self.y = torch.zeros(self.x.shape[0], 1)\n",
+    "        # Set the X values above 0.2 to 1\n",
+    "        self.y[self.x[:, 0] > 0.2] = 1\n",
+    "        # Set the .len attribute because we need to override the __len__ method\n",
+    "        self.len = self.x.shape[0]\n",
+    "    \n",
+    "    # Getter that returns the data at the given index\n",
+    "    def __getitem__(self, index):      \n",
+    "        return self.x[index], self.y[index]\n",
+    "    \n",
+    "    # Get length of the dataset\n",
+    "    def __len__(self):\n",
+    "        return self.len"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Camera index 0 is available\n",
+      "Camera index 1 is not available\n",
+      "Camera index 2 is not available\n",
+      "Camera index 3 is not available\n",
+      "Camera index 4 is not available\n",
+      "Camera index 5 is not available\n",
+      "Camera index 6 is not available\n",
+      "Camera index 7 is not available\n",
+      "Camera index 8 is not available\n",
+      "Camera index 9 is not available\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import cv2\n",
+    "\n",
+    "# def list_camera_indices():\n",
+    "#     # Iterate over a range of possible camera indices\n",
+    "#     for i in range(10):\n",
+    "#         # Initialize a VideoCapture object with the current index\n",
+    "#         cap = cv2.VideoCapture(i)\n",
+    "        \n",
+    "#         # Check if the camera is opened successfully\n",
+    "#         if cap.isOpened():\n",
+    "#             print(f\"Camera index {i} is available\")\n",
+    "#             # Release the VideoCapture object\n",
+    "#             cap.release()\n",
+    "#         else:\n",
+    "#             print(f\"Camera index {i} is not available\")\n",
+    "\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     list_camera_indices()\n"
+   ]
   }
  ],
  "metadata": {
